actualizacion de diseño

--- a/index.html
+++ b/index.html
@@ -22,19 +22,21 @@
 </head>
 
 <body class="bg-gray-50 font-poppins">
-  <div class="h-screen bg-gradient-to-t from-[#e30e0e] via-[#7a3e3e] to-[#1a1717] flex flex-col items-center justify-center text-center px-4">
+<div class="h-screen bg-gradient-to-t from-[#e30e0e] via-[#7a3e3e] to-[#1a1717] flex flex-col items-center justify-center text-center px-4">
 
-    <img src="./imagenes/yo.jpeg" alt="yo" class="w-40 h-40 rounded-full border-4 border-white shadow-lg mb-6 object-cover">
+<div id="perfil" class="flex flex-col items-center p-8 bg-black/60 font-bitcount rounded-3xl shadow-2xl border border-white/30">
+  <img src="./imagenes/yo.jpeg" alt="yo" class="w-44 h-44 rounded-full border-4 border-black shadow-xl mb-10 object-cover">
+  <h1 class="text-white text-6xl md:text-7xl font-bitcount mb-2 drop-shadow-lg">Toño Fox</h1>
+  <h2 class="text-white text-2xl md:text-3xl font-poppins drop-shadow-md">Desarrollador Web</h2>
+</div>
 
-    <!-- Nombre con Bitcount -->
-    <h1 class="text-white text-5xl font-bitcount mb-2">Toño Fox</h1>
-    <h2 class="text-white text-2xl mb-6 font-poppins">Desarrollador Web</h2>
+<div class="flex flex-wrap justify-center gap-4 mb-8">
+  <a href="#contacto" class="bg-white text-[#e30e0e] px-6 py-2 rounded-full font-bitcount shadow hover:bg-gray-200 transition">Contacto</a>
+  <a href="#proyectos" class="bg-white text-[#e30e0e] px-6 py-2 rounded-full font-bitcount shadow hover:bg-gray-200 transition">Proyectos</a>
+  <a href="#habilidades" class="bg-white text-[#e30e0e] px-6 py-2 rounded-full font-bitcount shadow hover:bg-gray-200 transition">Habilidades</a>
+  <a href="#experiencia" class="bg-white text-[#e30e0e] px-6 py-2 rounded-full font-bitcount shadow hover:bg-gray-200 transition">Experiencia</a>
+</div>
 
-   
-    <a href="#contacto" class="bg-white text-[#e30e0e] px-6 py-2 rounded-full font-semibold shadow hover:bg-gray-200 transition font-poppins">Contáctame</a>
-    <a href="#contacto" class="bg-white text-[#e30e0e] px-6 py-2 rounded-full font-semibold shadow hover:bg-gray-200 transition font-poppins">Contáctame</a>
-    <a href="#contacto" class="bg-white text-[#e30e0e] px-6 py-2 rounded-full font-semibold shadow hover:bg-gray-200 transition font-poppins">Contáctame</a>
-    <a href="#contacto" class="bg-white text-[#e30e0e] px-6 py-2 rounded-full font-semibold shadow hover:bg-gray-200 transition font-poppins">Contáctame</a>
 
     <div id="contacto" class="mt-12">
       <h3 class="text-black text-3xl mb-4 font-poppins">Contacto</h3>
