seccion de proyectos terminada

--- a/index.html
+++ b/index.html
@@ -61,15 +61,34 @@
 
     <p class="text-gray-200 text-sm mt-12 font-poppins animate-fadeIn"> &copy; 2025 Toño Fox. Todos los derechos reservados.</p>
   </div>
-    <div class="min-h-screen bg-gradient-to-t from-[##000000] via-[##4f4f4f] to-[#1a1717] flex flex-col items-center text-center px-4 pt-16 pb-16">
- <div class="flex flex-col items-center p-8 bg-black/60 font-bitcount rounded-3xl shadow-2xl border border-white/30 animate-fadeIn"> 
-  <hr class="border-t border-white/30 my-12 w-2/3 mx-auto">
-      <h3 class="text-white text-3xl mb-4 font-poppins border-b-2 border-white/30 inline-block pb-1">Proyectos</h3>
+    <div id="proyectos" class="min-h-screen bg-gradient-to-t from-[#000000] via-[#4f4f4f] to-[#1a1717] flex flex-col items-center text-center px-4 pt-16 pb-16">
+    <div class="flex flex-col items-center p-8 bg-black/60 font-bitcount rounded-3xl shadow-2xl border border-white/30 animate-fadeIn"> 
+      <h3 class="text-white text-3xl mb-8 font-poppins border-b-2 border-white/30 inline-block pb-1">Proyectos</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         <div class="bg-black/20 backdrop-blur-md rounded-2xl shadow-lg border border-white/20 p-4">
           <h4 class="text-white text-xl mb-2 font-poppins">Proyecto 1</h4>
-          <p class="text-white mb-2 font-poppins">Descripción breve del proyecto</p>
+          <p class="text-white mb-2 font-poppins">Creación de base de datos para una empresa de logística.</p>
+          <a href="#" class="text-[#e30e0e] hover:underline">Ver más</a>
         </div>
+        <div class="bg-black/20 backdrop-blur-md rounded-2xl shadow-lg border border-white/20 p-4">
+          <h4 class="text-white text-xl mb-2 font-poppins">Proyecto 2</h4>
+          <p class="text-white mb-2 font-poppins">Actualización de página web para una empresa de compra y venta.</p>
+          <a href="#" class="text-[#e30e0e] hover:underline">Ver más</a>
+        </div>
+        <div class="bg-black/20 backdrop-blur-md rounded-2xl shadow-lg border border-white/20 p-4">
+          <h4 class="text-white text-xl mb-2 font-poppins">Proyecto 3</h4>
+          <p class="text-white mb-2 font-poppins">Aplicación móvil para una empresa de servicios.</p>
+          <a href="#" class="text-[#e30e0e] hover:underline">Ver más</a>
+        </div>
+        <div class="bg-black/20 backdrop-blur-md rounded-2xl shadow-lg border border-white/20 p-4">
+          <h4 class="text-white text-xl mb-2 font-poppins">Proyecto 4</h4>
+          <p class="text-white mb-2 font-poppins">Tienda en línea para una empresa de retail.</p>
+          <a href="#" class="text-[#e30e0e] hover:underline">Ver más</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
       </div>
     </div>
 </body>
