seccion de habilidades acabada

--- a/index.html
+++ b/index.html
@@ -89,7 +89,17 @@
     </div>
   </div>
 
-      </div>
+  <div id="habilidades" class="min-h-screen bg-gradient-to-t from-[#1a1717] via-[#3e3e3e] to-[#000000] flex flex-col items-center text-center px-4 pt-16 pb-16">
+    <div class="max-w-3xl w-full text-left bg-black/60 backdrop-blur-md rounded-3xl shadow-lg border border-white/20 p-6 animate-fadeIn">
+      <h3 class="text-white text-3xl mb-4 font-poppins border-b-2 border-white/30 inline-block pb-1">Habilidades</h3>
+      <ul class="list-disc list-inside text-white font-poppins space-y-2">
+        <li>HTML, CSS, JavaScript, C, C++, C#, .net, Python</li>
+        <li>Tailwind CSS y frameworks modernos</li>
+        <li>Desarrollo responsivo y accesible</li>
+        <li>Bases de datos (MySQL, MongoDB)</li>
+        <li>Versionado con Git/GitHub</li>
+      </ul>
     </div>
+    
 </body>
 </html>
