--- a/index.html
+++ b/index.html
@@ -100,6 +100,24 @@
         <li>Versionado con Git/GitHub</li>
       </ul>
     </div>
-    
+     <div id="experiencia" class="min-h-screen bg-gradient-to-t from-[#000000] via-[#2b2b2b] to-[#1a1717] flex flex-col items-center text-center px-4 pt-16 pb-16">
+    <div class="max-w-3xl w-full text-left bg-black/60 backdrop-blur-md rounded-3xl shadow-lg border border-white/20 p-6 animate-fadeIn">
+      <h3 class="text-white text-3xl mb-4 font-poppins border-b-2 border-white/30 inline-block pb-1">Experiencia</h3>
+      <div class="space-y-4 text-white font-poppins">
+        <div>
+          <h4 class="text-xl font-semibold">Desarrollador Web Freelance</h4>
+          <p class="text-sm">2024 - Presente</p>
+          <p>Creación de sitios web responsivos para pequeños negocios y emprendedores.</p>
+        </div>
+        <div>
+          <h4 class="text-xl font-semibold">Prácticas en Empresa de Software</h4>
+          <p class="text-sm">2025</p>
+          <p>Apoyo en proyectos de mantenimiento y optimización de plataformas internas.</p>
+        </div>
+        <div>
+          <h4 class="text-xl font-semibold">Voluntariado en oracle</h4>
+          <p class="text-sm">2025</p>
+          <p>pasante junior de ingeneria en desarrollo de software.</p>
+      </div>
 </body>
 </html>
