--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <p>Creación de sitios web responsivos para pequeños negocios y emprendedores.</p>
         </div>
         <div>
-          <h4 class="text-xl font-semibold">Prácticas en Empresa de Software</h4>
+          <h4 class="text-xl font-semibold">Practicas en Empresa de Software</h4>
           <p class="text-sm">2025</p>
           <p>Apoyo en proyectos de mantenimiento y optimización de plataformas internas.</p>
         </div>
